Fixed spacing on explore/cookbook page and format of ingredients in recipe page

--- a/public/css/cookbook.css
+++ b/public/css/cookbook.css
@@ -89,3 +89,7 @@ input[type="radio"] {
 #nextto2, #nextto3, #nextto4, #nextto5, #nextto6, #finish {
     right: 50px;
 }
+
+#addIngredient {
+    margin-bottom: 10px;
+}
